--- a/pa004_health_insurance_cross_sell.ipynb
+++ b/pa004_health_insurance_cross_sell.ipynb
@@ -23,17 +23,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-07T22:45:06.127145Z",
-     "start_time": "2021-01-07T22:45:04.177103Z"
+     "end_time": "2021-01-09T17:42:27.300344Z",
+     "start_time": "2021-01-09T17:42:27.085224Z"
     }
    },
    "outputs": [],
    "source": [
+    "import psycopg2\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import postgres_crud as pc"
    ]
   },
   {
@@ -41,6 +43,545 @@
    "metadata": {},
    "source": [
     "## Helper Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-09T17:42:27.304073Z",
+     "start_time": "2021-01-09T17:42:27.301883Z"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Coletando os Dados"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conhecendo as tabelas do BD."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-09T18:06:20.295596Z",
+     "start_time": "2021-01-09T18:06:18.025013Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Buscando os dados!!!\n",
+      "Conexão com Postgresql fechada\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>table_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>users</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>vehicle</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>insurance</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  table_name\n",
+       "0      users\n",
+       "1    vehicle\n",
+       "2  insurance"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Parametros\n",
+    "HOST = \"comunidade-ds-postgres.c50pcakiuwi3.us-east-1.rds.amazonaws.com\"\n",
+    "PORT = \"5432\"\n",
+    "DATABASE = \"comunidadedsdb\"\n",
+    "USERNAME = \"member\"\n",
+    "PASSWORD = \"cdspa\"\n",
+    "\n",
+    "# Query SQL to find the tables names\n",
+    "query =   \"\"\"\n",
+    "          SELECT table_name \n",
+    "          FROM information_schema.tables\n",
+    "          WHERE table_schema='pa004'\n",
+    "          AND table_type='BASE TABLE';\n",
+    "          \n",
+    "          \"\"\"\n",
+    "\n",
+    "data = pc.Postgresql.retrieve_data(query=query,\n",
+    "                                   user=USERNAME,\n",
+    "                                   password=PASSWORD,\n",
+    "                                   host=HOST,\n",
+    "                                   port=PORT,\n",
+    "                                   database=DATABASE,\n",
+    "                                   connect=True,\n",
+    "                                   objeto = 'pd')\n",
+    "\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cool we have three tables to work with 'users', 'vehicle', 'insurance'. Let's get them individually."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-09T19:35:44.593706Z",
+     "start_time": "2021-01-09T19:34:07.162501Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Buscando os dados!!!\n",
+      "Conexão com Postgresql fechada\n",
+      "Buscando os dados!!!\n",
+      "Conexão com Postgresql fechada\n",
+      "Buscando os dados!!!\n",
+      "Conexão com Postgresql fechada\n",
+      "\n",
+      "There is duplicated ids ?\n",
+      "\n",
+      "Duplicated ids in df 0 - [False]\n",
+      "\n",
+      "Duplicated ids in df 1 - [False]\n",
+      "\n",
+      "Duplicated ids in df 2 - [False]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# querys\n",
+    "query_insurance = \"\"\"SELECT * FROM pa004.insurance; \"\"\"\n",
+    "query_users = \"\"\"SELECT * FROM pa004.users; \"\"\"\n",
+    "query_vehicle = \"\"\"SELECT * FROM pa004.vehicle; \"\"\"\n",
+    "\n",
+    "QUERY_LIST = [query_insurance,query_users, query_vehicle]\n",
+    "\n",
+    "# Generating a list of dataframes\n",
+    "dataframes = []\n",
+    "for query in QUERY_LIST:\n",
+    "    \n",
+    "    data = pc.Postgresql.retrieve_data(query=query,\n",
+    "                                   user=USERNAME,\n",
+    "                                   password=PASSWORD,\n",
+    "                                   host=HOST,\n",
+    "                                   port=PORT,\n",
+    "                                   database=DATABASE,\n",
+    "                                   connect=True,\n",
+    "                                   objeto = 'pd')\n",
+    "    dataframes.append(data)\n",
+    "    \n",
+    "\n",
+    "# Checking duplicated ids\n",
+    "print(\"\\nThere is duplicated ids ?\")\n",
+    "for i in range(0,3):\n",
+    "    df = dataframes[i]\n",
+    "    dp = df[['id']].duplicated()\n",
+    "    result = dp.unique()\n",
+    "    print(f'\\nDuplicated ids in df {i} - {result}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-09T19:17:00.000284Z",
+     "start_time": "2021-01-09T19:16:59.854850Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Splitting the dataframes in differents DFs.\n",
+    "\n",
+    "# Insurance df\n",
+    "insurance_df = dataframes[0]\n",
+    "# Users df\n",
+    "users_df = dataframes[1]\n",
+    "# Vehicle df\n",
+    "vehicles_df = dataframes[2]\n",
+    "\n",
+    "# Logical Test - we want a empty \n",
+    "diff = set(insurance_df['id']).difference(set(users_df['id']), set(vehicles_df['id']))\n",
+    "print(diff)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-09T19:54:57.040384Z",
+     "start_time": "2021-01-09T19:54:57.026446Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>driving_license</th>\n",
+       "      <th>vehicle_age</th>\n",
+       "      <th>vehicle_damage</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>&gt; 2 Years</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1-2 Year</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>&gt; 2 Years</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>&lt; 1 Year</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>&lt; 1 Year</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  driving_license vehicle_age vehicle_damage\n",
+       "0   1                1   > 2 Years            Yes\n",
+       "1   2                1    1-2 Year             No\n",
+       "2   3                1   > 2 Years            Yes\n",
+       "3   4                1    < 1 Year             No\n",
+       "4   5                1    < 1 Year             No"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataframes[2].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-09T18:23:58.020097Z",
+     "start_time": "2021-01-09T18:23:58.006373Z"
+    }
+   },
+   "source": [
+    "## Retriving all data with one Query"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-09T20:01:56.973961Z",
+     "start_time": "2021-01-09T20:00:52.443216Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Buscando os dados!!!\n",
+      "Conexão com Postgresql fechada\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>previously_insured</th>\n",
+       "      <th>annual_premium</th>\n",
+       "      <th>vintage</th>\n",
+       "      <th>response</th>\n",
+       "      <th>id</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>age</th>\n",
+       "      <th>region_code</th>\n",
+       "      <th>policy_sales_channel</th>\n",
+       "      <th>id</th>\n",
+       "      <th>driving_license</th>\n",
+       "      <th>vehicle_age</th>\n",
+       "      <th>vehicle_damage</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23367.0</td>\n",
+       "      <td>249</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>23</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>152.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>&lt; 1 Year</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>13</td>\n",
+       "      <td>1</td>\n",
+       "      <td>31409.0</td>\n",
+       "      <td>221</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>41</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>13</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1-2 Year</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>18</td>\n",
+       "      <td>1</td>\n",
+       "      <td>46622.0</td>\n",
+       "      <td>299</td>\n",
+       "      <td>0</td>\n",
+       "      <td>18</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>25</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>152.0</td>\n",
+       "      <td>18</td>\n",
+       "      <td>1</td>\n",
+       "      <td>&lt; 1 Year</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>31</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2630.0</td>\n",
+       "      <td>136</td>\n",
+       "      <td>0</td>\n",
+       "      <td>31</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>26</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>160.0</td>\n",
+       "      <td>31</td>\n",
+       "      <td>1</td>\n",
+       "      <td>&lt; 1 Year</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>39</td>\n",
+       "      <td>0</td>\n",
+       "      <td>42297.0</td>\n",
+       "      <td>264</td>\n",
+       "      <td>0</td>\n",
+       "      <td>39</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>45</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>124.0</td>\n",
+       "      <td>39</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1-2 Year</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  previously_insured  annual_premium  vintage  response  id  gender  age  \\\n",
+       "0   7                   0         23367.0      249         0   7    Male   23   \n",
+       "1  13                   1         31409.0      221         0  13  Female   41   \n",
+       "2  18                   1         46622.0      299         0  18  Female   25   \n",
+       "3  31                   0          2630.0      136         0  31  Female   26   \n",
+       "4  39                   0         42297.0      264         0  39    Male   45   \n",
+       "\n",
+       "   region_code  policy_sales_channel  id  driving_license vehicle_age  \\\n",
+       "0         11.0                 152.0   7                1    < 1 Year   \n",
+       "1         15.0                  14.0  13                1    1-2 Year   \n",
+       "2         35.0                 152.0  18                1    < 1 Year   \n",
+       "3          8.0                 160.0  31                1    < 1 Year   \n",
+       "4          8.0                 124.0  39                1    1-2 Year   \n",
+       "\n",
+       "  vehicle_damage  \n",
+       "0            Yes  \n",
+       "1             No  \n",
+       "2             No  \n",
+       "3             No  \n",
+       "4            Yes  "
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Query SQL to find the tables names\n",
+    "query =   \"\"\"\n",
+    "            SELECT * \n",
+    "            FROM pa004.insurance i\n",
+    "            INNER JOIN pa004.users u\n",
+    "                 on i.id = u.id \n",
+    "            INNER JOIN pa004.vehicle v\n",
+    "                 on u.id = v.id\n",
+    "          \"\"\"\n",
+    "\n",
+    "data = pc.Postgresql.retrieve_data(query=query,\n",
+    "                                   user=USERNAME,\n",
+    "                                   password=PASSWORD,\n",
+    "                                   host=HOST,\n",
+    "                                   port=PORT,\n",
+    "                                   database=DATABASE,\n",
+    "                                   connect=True,\n",
+    "                                   objeto = 'pd')\n",
+    "\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Description"
    ]
   },
   {
