--- a/pa004_health_insurance_cross_sell.ipynb
+++ b/pa004_health_insurance_cross_sell.ipynb
@@ -40,7 +40,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": "true"
+   },
    "source": [
     "## Helper Functions"
    ]
@@ -66,7 +68,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": "true"
+   },
    "source": [
     "## Conhecendo as tabelas do BD."
    ]
@@ -594,9 +598,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (pa004)",
+   "display_name": "Python (cursos-env)",
    "language": "python",
-   "name": "hiscs_project"
+   "name": "cursos-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -623,6 +627,7 @@
    "toc_section_display": true,
    "toc_window_display": true
   },
+  "toc-autonumbering": true,
   "varInspector": {
    "cols": {
     "lenName": 16,
